--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="app"></div>
-  <script src="dist/bundle.js"></script>
+  <script src="example/bundle.js"></script>
   </body>
 </html>
 
